# ReddyEngine

./: .gitignore  .gitmodules  BuildVSSolution19.bat  BuildVSSolution22.bat  BuildXCode.sh  CMakeLists.txt  README.md  intelisense.lua  premake5.lua
.github/workflows/: msbuild.yml
ReddyEngine/: CMakeLists.txt  premake5.lua
ReddyEngine/SDL2-Premake/: .gitignore  SDL2.lua  SDL2main.lua  WhatsNew.txt
ReddyEngine/SDL2-Premake/docs/: README-n3ds.md
ReddyEngine/box2d/: .gitignore  premake5.lua
ReddyEngine/glm/: .gitignore  premake5.lua
ReddyEngine/imgui/: .gitignore  premake5.lua
ReddyEngine/include/Engine/: Audio.h  Component.h  ComponentFactory.h  Config.h  Constants.h  Entity.h  EntityManager.h  Event.h  EventHandler.h  EventSystem.h  Font.h  FrameAnim.h  FrameAnimComponent.h  GUI.h  IGame.h  ISerializable.h  Input.h  Log.h  LuaBindings.h  Music.h  MusicManager.h  PFX.h  PFXComponent.h  Platform.h  ReddyEngine.h  Resource.h  ResourceManager.h  Scene.h  ScriptComponent.h  Slice9Component.h  Sound.h  SpriteBatch.h  SpriteComponent.h  SpriteManager.h  TextComponent.h  Texture.h  Utils.h
ReddyEngine/jsoncpp/: .gitignore  premake5.lua
ReddyEngine/lua/: CMakeLists.txt  premake5.lua
ReddyEngine/src/: Audio.cpp  Component.cpp  ComponentFactory.cpp  ComponentManager.cpp  ComponentManager.h  Config.cpp  Entity.cpp  EntityManager.cpp  Event.cpp  EventSystem.cpp  Font.cpp  FrameAnim.cpp  FrameAnimComponent.cpp  GUI.cpp  Input.cpp  Log.cpp  LuaBindings.cpp  LuaCloneTable.cpp  LuaCreateBindings.cpp  Music.cpp  PFX.cpp  PFXComponent.cpp  Platform.cpp  ReddyEngine.cpp  ResourceManager.cpp  Scene.cpp  ScriptComponent.cpp  Slice9Component.cpp  Sound.cpp  SpriteBatch.cpp  SpriteComponent.cpp  SpriteManager.cpp  TextComponent.cpp  Texture.cpp  Utils.cpp
ReddyEngine/stb-premake/: .gitignore  premake5.lua
ReddyEngine/tinyfiledialogs/: tinyfiledialogs.c
ReddyEngine/tinyxml2/: .gitignore  premake5.lua
ReddyGame/: premake5.lua
ReddyGame/src/: ActionManager.cpp  (+21 more)
art/: README.md
assets/: README.md
(+22 files in other folders)
